--- a/2019-01-08/tv_ratings.Rmd
+++ b/2019-01-08/tv_ratings.Rmd
@@ -5,17 +5,15 @@ output: html_document
 
 ```{r}
 library(tidyverse)
-# library(ggrepel)
+library(ggrepel)
+library(viridis)
 library(lubridate)
-library(scales)
 library(hrbrthemes)
 theme_set(theme_ipsum())
 tv_ratings <- read_csv("https://github.com/rfordatascience/tidytuesday/raw/master/data/2019/2019-01-08/IMDb_Economist_tv_ratings.csv")
 ```
 
 ```{r}
-bk_color <- "#252525"
-grey_color <- "#565656"
 tv_ratings_separated <- tv_ratings %>%
   separate(genres, c("Genre1", "Genre2", "Genre3"), sep = ",")
 ```
@@ -34,18 +32,6 @@ genres_gathered <- tv_ratings_separated %>%
 movies_per_year <- genres_gathered %>%
   count(year)
 
-labs_genre <- genres_gathered %>%
-  count(genre, year) %>%
-  filter(year == "1990") %>%
-  filter(
-    genre %in% c("Drama", "Crime",
-                 "Mytery", "Comedy",
-                 "Action", "Romance")
-  ) %>%
-  mutate(
-    percent = n / 237
-  )
-
 genres_gathered %>%
   count(genre, year) %>%
   left_join(movies_per_year, by = "year") %>%
@@ -59,108 +45,117 @@ genres_gathered %>%
   ) %>%
   drop_na() %>%
   ggplot(aes(x = year, y = percent, color = genre)) + 
-  geom_line(size = 1) +
-  geom_point(size = 4) +
-  geom_text_repel(data = labs_genre, aes(x = year, y = percent, 
-                                         label = genre, color = genre),
-                  nudge_y = .03, nudge_x = -5,
-                  fontface = "bold", size = rel(4)) +
+  geom_line(size = 1.5) +
+  geom_point(size = 6) +
   theme_ipsum() +
   scale_y_continuous(labels = percent_format(), position = "right") +
-  # scale_color_viridis(discrete = TRUE, option = "magma") +
-  scale_color_manual(values = c("#a6611a", "#dfc27d", 
-                                "#f5f5f5", "#80cdc1", 
-                                "#018571")) +
+  scale_color_viridis(discrete = TRUE, option = "viridis") +
   labs(
     x = "Year", 
     y = "Percent %",
-    title = "Life is a drama",
-    subtitle = "The proportion of genres within the last 28 years",
-    caption = "All years have been rounded down to the nearest 5 years\ndata: ImDb | graphic: Christian Burkhart",
+    title = "How the popularity of the top 5 genres changed over time",
+    caption = "All years have been rounded down to the nearest 5 years",
     color = "Genre"
   ) +
   theme(
-    plot.subtitle = element_text(vjust = 1, color ="beige"), 
-    plot.caption = element_text(vjust = 1, color = grey_color),
+    plot.background = element_rect(fill = "#080808"),
     plot.title = element_text(colour = "beige"),
-    axis.title = element_text(colour = "beige"), 
-    axis.text = element_text(colour = "beige"), 
-    legend.text = element_text(colour = "beige"), 
-    legend.title = element_text(colour = "beige"), 
-    plot.background = element_rect(fill = bk_color), 
-    panel.grid.minor.x = element_line(colour = bk_color),
-    panel.grid.minor.y = element_line(colour = bk_color),
-    panel.grid.major.x = element_line(colour = "#393939"),
-    panel.grid.major.y = element_line(colour = bk_color),
-    strip.text.x = element_blank(),
-    legend.background = element_rect(fill = bk_color, 
-        colour = bk_color),
-    legend.position = "none"
-  ) 
+    axis.title = element_text(colour = "beige"),
+    axis.text = element_text(colour = "beige"),
+    # panel.background = element_rect(fill = "#121212"),
+    legend.text = element_text(colour = "beige"),
+    legend.title = element_text(colour = "beige"),
+    # plot.margin = unit(1, "npc"),
+    plot.caption = element_text(colour = "beige"),
+    panel.grid.minor = element_line(colour = "#080808"),
+    panel.grid.major.x = element_line(colour = "#080808"),
+    panel.grid.major.y = element_line(colour = "#434343"),
+    legend.position = "bottom"
+  )
 ```
 
-How did the top seasons average rating change over time? 
+How did the ratings change over time? 
 
 ```{r}
-top_shows <- c("Game of Thrones",
-               "Breaking Bad",
-               "The Bing Bang Theory",
-               "Law & Order",
-               "Downton Abbey",
-               "The West Wing",
-               "Doctor Who",
-               "The X-Files",
-               "Sherlock",
-               "The Sopranos") 
+tv_ratings %>%
+  mutate(
+    breaking_bad = title == "Breaking Bad"
+  ) %>%
+ggplot(aes(x = date, y = av_rating)) +
+  geom_point(alpha = .6, aes(color = breaking_bad)) +
+  geom_smooth(method = "lm", se = FALSE, linetype = "dashed", 
+              color = "skyblue4")
+```
 
-top_shows_filtered <- tv_ratings %>%
-  filter(title %in% top_shows)
 
-labs <- top_shows_filtered %>% 
+
+
+```{r}
+# Shows we'll look at specifically
+tv_shows <- c("The Sopranos", 
+              "Twin Peaks", 
+              "Sex and the City", 
+              "The Wire", 
+              "The X-Files", 
+              "Breaking Bad", 
+              "Game of Thrones")
+
+# This will let us label our plot correctly
+# also we need to account for the two reboots in our data
+tv_show_dat <- tv_ratings %>% 
+  filter(title %in% tv_shows) %>% 
+  mutate(title = case_when(
+    title == "Twin Peaks" & date > as.Date("2010-01-01") ~ "Twin Peaks\n(reboot)", 
+    title == "The X-Files" & date > as.Date("2010-01-01") ~ "The X-Files\n(reboot)",
+    TRUE ~ title
+  ))
+
+# Without this we'll get a text label at each highlighted point
+# We only want the text to show on the first point for each series
+labs <- tv_show_dat %>% 
   group_by(title) %>% 
   filter(row_number(title) == 1)
 
-
-top_shows_filtered %>%
-  ggplot(aes(x = date, y = av_rating)) + 
-  geom_point(data = select(top_shows_filtered,-title), 
-             colour = grey_color) +
-  geom_smooth(data = select(top_shows_filtered,-title), 
-              method = "lm", se = F, 
-            color = grey_color, size = 0.5) + 
-  geom_smooth(method = "lm", se = F, 
-              color = "#14c3a5") + 
-  geom_line(aes(group = title), color = "#c31432") +
-  geom_point(color = "#c31432") + 
-  geom_text_repel(data = labs, aes(x = date, y = av_rating, label = title),
-                  color = "beige", inherit.aes = FALSE, nudge_y = -.15,
-                  fontface = "bold", size = rel(4)) +
-  facet_wrap(~ title) +
-  theme(
-    plot.subtitle = element_text(vjust = 1), 
-    plot.caption = element_text(vjust = 1, color = grey_color),
-    axis.title = element_text(colour = grey_color), 
-    axis.text = element_text(colour = grey_color), 
-    plot.title = element_text(colour = "beige"), 
-    legend.text = element_text(colour = "beige"), 
-    legend.title = element_text(colour = "beige"), 
-    plot.background = element_rect(fill = bk_color), 
-    panel.grid.minor.x = element_line(colour = bk_color),
-    panel.grid.minor.y = element_line(colour = bk_color),
-    panel.grid.major.x = element_line(colour = bk_color),
-    panel.grid.major.y = element_line(colour = bk_color),
-    strip.text.x = element_blank(),
-    legend.background = element_rect(fill = bk_color, 
-        colour = bk_color)
-  ) +
-  scale_y_continuous(limits = c(7, 10), breaks = c(7, 8, 9, 10)) +
-  scale_x_date(date_breaks = "9 year", date_labels = "%Y") +
-  labs(
-    x = "Year", 
-    y = "Average rating",
-    title = "The average rating of the top series of the last 28 years",
-    caption = "data: ImDb | graphic: Christian Burkhart"
-  )
+# First Plot
+# We are trying to make it _exactly_ as it is created on the article
+# (sans interactive element)
+tv_ratings %>% 
+  mutate(year = lubridate::year(date)) %>% 
+  ggplot(aes(x = date, y = av_rating, size = share)) + 
+  geom_point(color = "#d7ebf2", alpha = .8) +
+  geom_smooth(method = "lm", se = F, linetype = "dashed", 
+              color = "skyblue4") + 
+  annotate(geom = "text", x = as.Date("2015-01-01"), y = 8.2, 
+            label = "TV drama trend", color = "skyblue4", 
+           fontface = "bold", size = 4) + 
+  geom_point(data = tv_show_dat, aes(x = date, y = av_rating, size = share),
+             color = "#42bbd0") +
+  geom_line(data = tv_show_dat, aes(x = date, y = av_rating, group = title), 
+            color = "#42bbd0", inherit.aes = FALSE) + 
+  geom_text_repel(data = labs, aes(x = date, y = av_rating, label = title), 
+                  color = "#42bbd0", inherit.aes = FALSE, nudge_y = -.15,
+                  fontface = "bold", size = rel(6)) + 
+  coord_cartesian(ylim = c(5.5, 9.5)) + 
+  scale_y_continuous(breaks = seq(5.5, 9.5, .5), position = "right")+
+  scale_x_date(breaks = as.Date(c("1990-01-01",
+                                       "1995-01-01", "2000-01-01",
+                                       "2005-01-01", "2010-01-01",
+                                       "2015-01-01", "2018-01-01")), 
+               date_labels = "%Y") +
+  scale_size_continuous(range = c(2,10)) + 
+  labs(title = "The end of channel surfing\nTV's golden age is real", 
+       subtitle = "But for every Breaking Bad, more shows are just bad",
+       caption = "*Seasons with at least 100 ratings on average\n*Size=Share of IMDb ratings for shows that year") + 
+  theme_minimal() + 
+  theme(plot.title = element_text(hjust = .5, size = rel(2.5)),
+        plot.subtitle = element_text(hjust = .5, face = "italic", size = rel(1.3)),
+        plot.caption = element_text(face = "italic", color = "grey60", 
+                                    size = rel(1)), 
+        axis.title = element_blank(),
+        axis.text = element_text(size = rel(1.2)),
+        panel.grid.minor = element_blank(),
+        panel.grid.major.y = element_blank(), 
+        legend.position = "none")
 ```
 
 
